add HTML to allow mixed content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700">
   <link rel="stylesheet" href="/splash-screen.css">
+
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   
   <!-- IOS -->
   <!-- <link rel="apple-touch-icon" href="/pwa/180.png" sizes="180x180"> -->
