feat: update pwa and auth layout

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <!--begin::Loading markup-->
     <div id="splash-screen" class="splash-screen">
-        <img src="/media/logos/default-dark.svg" class="dark-logo" alt="Metronic dark logo" />
-        <img src="/media/logos/default.svg" class="light-logo" alt="Metronic light logo" />
+        <img src="/media/logos/default-leaf.png" class="dark-logo" alt="Potadi dark logo" />
+        <img src="/media/logos/default-leaf.png" class="light-logo" alt="Potadi light logo" />
         <span>Loading ...</span>
     </div>
     <!--end::Loading markup-->
